loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:1: error: Missing closing brace `}' assumed here
fin = false
^Poucet2:10: error: ';' expected but 'if' found.
  }if (nbBiscuit()>=3) {
   ^Poucet2:16: error: 'while' expected but identifier found.
avance() 
^Poucet2:18: error: '(' expected but '}' found.
	}
        ^